# workspaces/liferay-aihub-workspace/modules/dxp/apps/ai-hub/ai-hub-rest-impl/rest-openapi.yaml
@@ -100,6 +100,11 @@ components:
                 placeholderMessage:
                     readOnly: true
                     type: string
+                suggestedQuestions:
+                    items:
+                        type: string
+                    readOnly: true
+                    type: array
                 title:
                     readOnly: true
                     type: string
